<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">

    <TextView
        android:id="@+id/txtRed"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="1"
        android:background="@color/colorRed"
        android:text="@string/red_string"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtOrange"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="1"
        android:background="@color/colorOrange"
        android:text="@string/orange_string"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtYellow"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="1"
        android:background="@color/colorYellow"
        android:text="@string/yellow_string"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtGreen"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="1"
        android:background="@color/colorGreen"
        android:text="@string/green_string"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtBlue"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="1"
        android:background="@color/colorBlue"
        android:text="@string/blue_string"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtIndigo"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="1"
        android:background="@color/colorIndigo"
        android:text="@string/indigo_string"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtViolet"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="1"
        android:background="@color/colorViolet"
        android:text="@string/violet_string"
        android:textAlignment="center"
        android:textSize="30sp" />
</LinearLayout>
